--- a/CarRefuelTracker.UI/CarRefuelTracker.UI.csproj
+++ b/CarRefuelTracker.UI/CarRefuelTracker.UI.csproj
@@ -56,6 +56,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.3.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
@@ -91,6 +94,7 @@
     </Compile>
     <Compile Include="DataAccess\SqliteDataAccess.cs" />
     <Compile Include="EventAggregationProvider.cs" />
+    <Compile Include="Helper\LogHelper.cs" />
     <Compile Include="Helper\TextFieldDoubleChecker.cs" />
     <Compile Include="Models\BrandModel.cs" />
     <Compile Include="Models\CarModel.cs" />
