Added the log4net logging

--- a/CarRefuelTracker.UI/App.config
+++ b/CarRefuelTracker.UI/App.config
@@ -5,22 +5,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
   </configSections>
+
   <log4net>
-    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date{ABSOLUTE} [%logger] %level - %message%newline%exception"/>
-      </layout>
-    </appender>
-    <appender name="FileAppender" type="log4net.Appender.FileAppender">
-      <file value="C:\users\public\documents\CarRefuelTracker\Logs\MyLogFile.txt"/>
-      <appendToFile value="true" />
-      <loggingModel type="log4net.Appender.FileAppender+MinimalLock"/>
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date{ABSOLUTE} [%logger] %level - %message%newline%exception"/>
-      </layout>
-    </appender>
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="C:\users\public\documents\CarRefuelTracker\Logs\MyRollingFile.txt"/>
+      <file type="log4net.Util.PatternString" value="%property{LogFile}.txt"/>
       <appendToFile value="true" />
       <rollingStyle value="Size"/>
       <maximumFileSize value="10MB"/>
@@ -31,12 +19,11 @@
       </layout>
     </appender>
     <root>
-      <level value="DEBUG"/>
-      <appender-ref ref="ConsoleAppender"/>
-      <appender-ref ref="FileAppender"/>
+      <level value="INFO"/>
       <appender-ref ref="RollingFileAppender"/>
     </root>
   </log4net>
+
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
